--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/jpg" href="src/favicon.ico"/>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Barlow+Condensed:wght@100;300;400;500;600&family=Barlow:wght@100;200;300;600;800&family=Inconsolata:wght@200;300;400&family=Open+Sans:wght@300&display=swap"
       rel="stylesheet"
@@ -49,7 +51,7 @@ Ana,Armiche,Alice,Benjamin,Beni,Coral,David Calero,Dani Villalba,Dani Vallejo,El
       </label>
       <label for=""
         >Líderes (*)
-        <textarea disabled id="lideres"></textarea>
+        <textarea id="lideres"></textarea>
       </label>
     </section>
     <div id="teamsContainer"></div>
